--- a/src/main/resources/templates/auth/result_Verify_form.html
+++ b/src/main/resources/templates/auth/result_Verify_form.html
@@ -15,7 +15,7 @@
         </div>
         <div th:if="${message != null}" class="alert alert-success">
             <p class="mb-0">[[${message}]]</p>
-            <a href="/login" class="btn btn-primary mt-3">Đăng nhập</a>
+            <a href="/login" class="btn btn-primary mt-3">Login</a>
         </div>
     </form>
 </div>
