--- a/src/main/resources/templates/cloth/edit.html
+++ b/src/main/resources/templates/cloth/edit.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-<title>Edit Book</title>
+<title>Edit Cloth</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
@@ -11,24 +11,24 @@
 <header th:insert="layouts/fragment.html :: header"></header>
 <div align="center" class="container">
 
-    <h1>Edit Book</h1>
+    <h1>Cloth Book</h1>
 
     <br />
     <form th:action="@{/clothes/save}" th:object="${cloth}"
           method="post" enctype="multipart/form-data" >
         <input type="hidden" th:field="*{id}" />
         <div class="col-6 mb-3">
-            <label class="col-sm-2 col-form-label">Book Title:</label>
+            <label class="col-sm-2 col-form-label">Cloth Title:</label>
             <input class="form-control" type="text" th:field="*{title}" />
         </div>
 
         <div class="col-6 mb-3">
-            <label class="col-sm-2 col-form-label">Book Price:</label>
+            <label class="col-sm-2 col-form-label"> Price:</label>
             <input class="form-control" type="text" th:field="*{price}" />
         </div>
 
         <div class="col-6 mb-3">
-            <label class="col-sm-2 col-form-label">Book Category:</label>
+            <label class="col-sm-2 col-form-label">Category:</label>
             <select class="form-control" th:field="*{category}">
                 <option value="">Select Category</option>
                 <option th:each="category : ${categories}" th:value="${category.id}"
