--- a/src/main/resources/templates/cloth/index.html
+++ b/src/main/resources/templates/cloth/index.html
@@ -4,16 +4,16 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="ISO-8859-1">
-    <title>BOOK LIST</title>
+    <title>CLOTH LIST</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
 <header th:insert="layouts/fragment.html :: header"></header>
 <div align="center" class="container">
-    <h1>Book List</h1>
+    <h1>Cloth List</h1>
     <div sec:authorize="hasAnyAuthority('CREATER','ADMIN')">
-        <a href="clothes/new">Create New Book</a><br/><br/>
+        <a href="clothes/new">Create New Cloth</a><br/><br/>
     </div>
     <br />
     <form th:action="@{'/clothes/page/' + ${currentPage} + '?sortField=id&sortType=asc'}" method="get">
@@ -28,7 +28,7 @@
         <thead>
         <tr>
             <th><a
-                    th:href="@{'/clothes/page/' + ${currentPage} + '?sortField=id&sortType=' + ${reverseSortType}}">Book ID</a></th>
+                    th:href="@{'/clothes/page/' + ${currentPage} + '?sortField=id&sortType=' + ${reverseSortType}}">STT</a></th>
             <th><a
                     th:href="@{'/clothes/page/' + ${currentPage} + '?sortField=title&sortType=' + ${reverseSortType}}">Title</a></th>
             <th><a
@@ -40,7 +40,7 @@
         </thead>
         <tbody>
         <tr th:each="cloth: ${clothes}">
-            <td th:text="${cloth.id}">Book ID</td>
+            <td th:text="${cloth.id}">STT</td>
             <td th:text="${cloth.title}">Title</td>
             <td th:text="${cloth.price}">Price</td>
             <td th:text="${cloth.category.name}">Category</td>
@@ -54,6 +54,16 @@
                     <a th:href="@{'/clothes/edit/'+${cloth.id}}">Edit</a></div>
                 <div sec:authorize="hasAnyAuthority('ADMIN')">
                     <a th:href="@{'/clothes/delete/'+${cloth.id}}">Delete</a></div></td>
+            <td>
+                <form th:action="@{/clothes/add-to-cart}" method="post" class="d-inline">
+                    <input type="hidden" name="id" th:value="${cloth.id}">
+                    <input type="hidden" name="name" th:value="${cloth.title}">
+                    <input type="hidden" name="price" th:value="${cloth.price}">
+                    <button type="submit" class="btn btn-success" onclick="return confirm('Are you sure you want to add this book to cart?')">
+                        Add to cart
+                    </button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
