--- a/src/main/resources/templates/layouts/fragment.html
+++ b/src/main/resources/templates/layouts/fragment.html
@@ -24,10 +24,11 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/clothes">Book</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/clothes">Cloth</a></li>
                     <li class="nav-item"><a class="nav-link" href="/categories">Category</a></li>
                     <li class="nav-item"><a class="nav-link" href="/roles">Role</a></li>
                     <li class="nav-item"><a class="nav-link" href="/users">User</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/cart">Cart</a></li>
                 </ul>
                 <ul class="nav navbar-nav flex-row justify-content-between ms-auto">
                     <li>
